queue and movie list no longer overlapping

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -84,9 +84,3 @@ img {max-width:100%;}
 #grid {
   padding-top: 110px;
 }
-
-.queue {
-  display: block;
-  text-align: center;
-  margin: auto;
-}
